feat: BFF
1. 增加BFF服务，用于内部系统登录，前端不保留OAuth2相关参数，并且不回传JWT给前端，只给Session
2. 网关可以直接通过Session拿到JWT然后继续传给后端服务

BFF职责：登录流程，Session创建，前端适配
网关职责：统一入口，Session→ JWT